<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp"
    android:layout_margin="8dp"
    app:cardMaxElevation="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardPreventCornerOverlap="true"
    app:contentPadding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/ingredient_description_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_description"
            android:textAppearance="?attr/textAppearanceHeadline4"
            />
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/ingredient_amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textAppearance="?attr/textAppearanceHeadline4"/>

            <TextView
                android:id="@+id/ingredient_unit_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_unit"
                android:textAppearance="?attr/textAppearanceBody1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/ingredient_location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_label"
                    android:text="@string/location"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAppearance="?attr/textAppearanceCaption"
                    />
                <TextView
                    android:id="@+id/ingredient_category_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_label"
                    android:text="@string/category"
                    android:paddingVertical="4dp"
                    android:paddingHorizontal="8dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="?attr/textAppearanceCaption"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/ingredient_best_before_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_before_title"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>