<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog"
    android:padding="16dp"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_unit"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:textSize="20sp"
        android:textAlignment="center"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unit_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_a_unit_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/add_a_unit_confirm_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_done_24"
            android:background="@drawable/custom_yes_button"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/confirm_label"
            />
        <ImageButton
            android:id="@+id/add_a_unit_cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:background="@drawable/custom_no_button"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/delete_label"
            />
    </LinearLayout>
</LinearLayout>
