<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.storage.AddIngredientActivity"
    android:padding="16dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_an_ingredient_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_form"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_an_ingredient"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3.SnackNTrack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/add_ingredient_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@drawable/custom_image_button"
            android:padding="12dp"
            android:contentDescription="@string/back"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_an_ingredient_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintTop_toBottomOf="@id/add_an_ingredient_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="spread">
        <LinearLayout
            android:id="@+id/add_an_ingredient_description_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_amount_row"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_description"
                android:textAppearance=
                    "@style/TextAppearance.MaterialComponents.Headline4.SnackNTrack"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_an_ingredient_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_an_ingredient_description_hint"
                    android:textColorHint="@color/gray_400"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_an_ingredient_amount_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_an_ingredient_description_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_unit_row"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textAppearance=
                    "@style/TextAppearance.MaterialComponents.Headline4.SnackNTrack"/>
            <ImageButton
                android:id="@+id/add_an_ingredient_decrease_amount_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_remove_24"
                android:background="@drawable/custom_image_button"
                android:padding="12dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/amount_minus"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_an_ingredient_amount_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:hint="@string/_0"
                    android:textColorHint="@color/gray_400"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/add_an_ingredient_increase_amount_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                android:background="@drawable/custom_image_button"
                android:padding="12dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/plus"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_an_ingredient_unit_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_an_ingredient_amount_row"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_category_row">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_unit"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4.SnackNTrack" />

            <TextView
                android:id="@+id/add_an_ingredient_unit_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginHorizontal="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5.SnackNTrack"
                />

            <ImageButton
                android:id="@+id/add_an_ingredient_amount_pick_unit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/custom_image_button"
                android:contentDescription="@string/add_unit"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_add_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_an_ingredient_category_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_an_ingredient_unit_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_location_row"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_category"
                android:textAppearance=
                    "@style/TextAppearance.MaterialComponents.Headline4.SnackNTrack"/>
            <ImageButton
                android:id="@+id/add_an_ingredient_amount_pick_category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                android:background="@drawable/custom_image_button"
                android:padding="12dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/add_category"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_an_ingredient_location_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_an_ingredient_category_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_an_ingredient_bbf_row"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient_location"
                android:textAppearance=
                    "@style/TextAppearance.MaterialComponents.Headline4.SnackNTrack"/>
            <ImageButton
                android:id="@+id/add_an_ingredient_amount_pick_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                android:background="@drawable/custom_image_button"
                android:padding="12dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/add_location"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_an_ingredient_bbf_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_an_ingredient_location_row"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/best_before_title"
                android:textAppearance=
                    "@style/TextAppearance.MaterialComponents.Headline4.SnackNTrack"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_an_ingredient_bbf_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:gravity="center"
                    android:hint="@string/ingredient_bbf_hint"
                    android:textColorHint="@color/gray_400"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/add_an_ingredient_calendar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_calendar_month_24"
                android:background="@drawable/custom_image_button"
                android:padding="12dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/add_an_ingredient_open_date_picker"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>