<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog"
    android:padding="16dp"

    android:gravity="center">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/delete_ingredient"
           android:textAppearance="?attr/textAppearanceHeadline3"
           android:textSize="20sp"
           android:textAlignment="center"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <ImageButton
               android:id="@+id/delete_an_ingredient_confirm_button"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_baseline_done_24"
               android:background="@drawable/custom_yes_button"
               android:padding="8dp"
               android:layout_marginTop="16dp"
               android:contentDescription="@string/confirm_label"
               />
           <ImageButton
               android:id="@+id/delete_an_ingredient_cancel_button"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_baseline_close_24"
               android:background="@drawable/custom_no_button"
               android:padding="8dp"
               android:layout_marginStart="8dp"
               android:layout_marginTop="16dp"
               android:contentDescription="@string/delete_label"
               />
       </LinearLayout>
</LinearLayout>
