<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="24dp"
    android:paddingVertical="4dp">

    <TextView
        android:id="@+id/view_recipe_ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/ingredient"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito"/>

    <TextView
        android:id="@+id/view_recipe_ingredient_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/view_recipe_ingredient_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/category"
        android:textSize="12sp"
        android:textStyle="bold"
        android:fontFamily="@font/nunito"
        android:background="@drawable/category_label"
        android:layout_marginLeft="16dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="2dp"/>

    <TextView
        android:id="@+id/view_recipe_ingredient_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/amount"
        android:textSize="16sp"
        android:fontFamily="@font/nunito"/>

</androidx.constraintlayout.widget.ConstraintLayout>